--- a/src/Components/Pricing/pricing.css
+++ b/src/Components/Pricing/pricing.css
@@ -112,7 +112,7 @@
 }
 
 .application .image{
-    width: 900px;
+    width: 940px;
 }
 .application .image img{
     width: 100%; height: 100%;
@@ -170,5 +170,36 @@
     }
     .store-btn p {
         display: none;
+    }
+}
+@media(max-width: 700px){
+    .details h1{
+        font-size: 38px;
+    }
+    .application{
+        display: flex;
+        justify-content: center;
+        flex: 1 1 500px;
+        align-items: center;
+        background-color: black;
+        color: white;
+        padding: 1.4rem 0.8rem;
+        margin: 2rem;
+    }
+    .store-btn{
+        background: red;
+        padding: 8px 14px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        gap: 0.6rem;
+        cursor: pointer;
+    }
+    .store-icon i{
+        font-size: 26px;
+    }
+    .store-btn:nth-child(2){
+        background: rgba(108, 107, 107, 0.4);
     }
 }
