--- a/src/pages/About/about.css
+++ b/src/pages/About/about.css
@@ -11,7 +11,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding: 50px;
+  padding: 2rem 1rem;
 }
 .hero{
   width: 100%;
@@ -55,6 +55,9 @@
 .reasons {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
 }
 .reasons .reason {
   display: flex;
@@ -62,13 +65,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  box-shadow: 0 0 30px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
   padding: 20px 0 40px 0;
-  margin: 10px;
   border-radius: 8px;
 }
 .reason i {
-  padding: 30px 148px;
+  padding: 30px 120px;
   font-size: 2rem;
   border-radius: 8px;
   margin: 10px;
