--- a/src/pages/Contact/contact.css
+++ b/src/pages/Contact/contact.css
@@ -50,7 +50,7 @@
 }
 
 .contact-form {
-  margin: 3rem;
+  margin: 3rem 0.8rem;
   padding: 1rem;
   box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
   display: flex;
